# Komodo-Web-APP

./: README.md
web-app/: Cargo.toml
web-app/migrations/2020-02-19-174942_create_users/: up.sql
web-app/src/: lib.rs  models.rs  schema.rs
web-app/templates/: home.hbs  signin.hbs  signup.hbs  style.css
web_app/: .env  Cargo.toml  db.db
web_app/src/: komodorpcutil.rs  main.rs
web_app/src/komodo/: address.rs  blockchain.rs  control.rs  cross_chain.rs  disclosure.rs  generate.rs  mining.rs  mod.rs  network.rs  rawtransactions.rs  util.rs  wallet.rs
web_app/templates/: home_page.hbs  landing_page.hbs  login.hbs  send_money_page.hbs  signup.hbs
