[package]
name = "web_api"
version = "0.1.0"
authors = ["Ashish Mainali <ashish.mainali@ymail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
rocket = "0.4.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"


[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["handlebars_templates"]
